# automondo

./: pyproject.toml  requirements.txt
src/automondo/: __init__.py  article_data_extractor.py  main.py  mondo_template.yaml  ontogpt_article_processor.py  pubmed_article_fetcher.py  validate_disease_annotations.py
src/resources/: PMID_100KGP.xlsx
