[tool.poetry]
name = "automondo"
version = "0.1.0"
description = ""
authors = ["iQuxLE <ckroll95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
requests = "^2.32.3"
tqdm = "^4.66.4"
ontogpt = "^0.3.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
